--- a/content/posts/Metis_Project_Luther.ipynb
+++ b/content/posts/Metis_Project_Luther.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project creates a script that scrapes movie data from www.imbd.com, and then merges it with movie data from www.boxofficemojo.com after cleaning. Then linear regression, decision tree, and random forest models are run with Scikit Learn Regression producing the highest R^2 of 82%. Overall, the models view \"vote\" and \"opening\" features as the most important features. Finally, a simple test case predicts what a fictional movie with a certain rating, opening, and vote number would make in lifetime gross at the boxoffice."
+    "This project webscrapes IMDB movie rankings using python’s BeautifulSoup package, and merges this data with BoxOfficeMojo information (www.boxofficemojo.com) related to movie boxoffice grosses. Then linear regression, decision tree, and random forest models are run with Scikit Learn Regression producing the highest R^2 of 82% that shows IMDB rankings and votes as important factors in predicting movie gross. Finally, a simple test case predicts what a fictional movie with a certain rating, opening, and vote number would make in lifetime gross at the boxoffice. "
    ]
   },
   {
