--- a/content/posts/global_terrorism_attack_attribution_cronin_final.ipynb
+++ b/content/posts/global_terrorism_attack_attribution_cronin_final.ipynb
@@ -12,6 +12,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This github post is part of a submission for Startup.ML's San Francisco fellowship. To showcase my knowledge and skill level with data science, I chose to work on the Global Terrorism Attack Attribution problem, which asks to build a model that can predict what terrorist group is responsible for attacks where the terrorist group is unknown. The decision tree grid search classification model had the highest accuracy (95%) for predicting the terrorist group of in sample test data.\n",
+    "\n",
+    "The data for this challenge can be found at https://www.start.umd.edu/gtd/\n",
+    "\n",
+    "Download this file: globalterrorismdb_0615dist\n",
+    "\n",
+    "Save it as a csv with the name: terrorist_data.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Agenda\n",
     "\n",
     "1. Problem Statement\n",
